exports[`require-throws-expectation > invalid(1): import assert from 'node:assert';\nassert.throws(fn); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(fn);

`;

exports[`require-throws-expectation > invalid(1): import assert from 'node:assert';\nassert.throws(fn); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws(fn);
    | ^^^^^^^^^^^^^^^^^ \`throws()\` accepts any thrown value. Pass an error matcher (error class, \`RegExp\`, validation object, or function) as the second argument.

`;

exports[`require-throws-expectation > invalid(10): import assert from 'node:assert';\nassert.throws(fn, 0); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(fn, 0);

`;

exports[`require-throws-expectation > invalid(10): import assert from 'node:assert';\nassert.throws(fn, 0); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws(fn, 0);
    |                   ^ \`throws()\` accepts any thrown value. Pass an error matcher (error class, \`RegExp\`, validation object, or function) as the second argument.

`;

exports[`require-throws-expectation > invalid(11): import assert from 'node:assert';\nassert.throws(fn, 1n); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(fn, 1n);

`;

exports[`require-throws-expectation > invalid(11): import assert from 'node:assert';\nassert.throws(fn, 1n); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws(fn, 1n);
    |                   ^^ \`throws()\` accepts any thrown value. Pass an error matcher (error class, \`RegExp\`, validation object, or function) as the second argument.

`;

exports[`require-throws-expectation > invalid(12): import assert from 'node:assert';\nassert.throws(fn, {}); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(fn, {});

`;

exports[`require-throws-expectation > invalid(12): import assert from 'node:assert';\nassert.throws(fn, {}); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws(fn, {});
    |                   ^^ \`throws()\` accepts any thrown value. Pass an error matcher (error class, \`RegExp\`, validation object, or function) as the second argument.

`;

exports[`require-throws-expectation > invalid(13): import assert from 'node:assert';\nassert.throws(fn, []); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(fn, []);

`;

exports[`require-throws-expectation > invalid(13): import assert from 'node:assert';\nassert.throws(fn, []); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws(fn, []);
    |                   ^^ \`throws()\` accepts any thrown value. Pass an error matcher (error class, \`RegExp\`, validation object, or function) as the second argument.

`;

exports[`require-throws-expectation > invalid(14): import assert from 'node:assert';\nassert.rejects(asyncFn, 42); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.rejects(asyncFn, 42);

`;

exports[`require-throws-expectation > invalid(14): import assert from 'node:assert';\nassert.rejects(asyncFn, 42); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.rejects(asyncFn, 42);
    |                         ^^ \`rejects()\` accepts any thrown value. Pass an error matcher (error class, \`RegExp\`, validation object, or function) as the second argument.

`;

exports[`require-throws-expectation > invalid(15): import assert from 'node:assert';\nassert.rejects(asyncFn, {}); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.rejects(asyncFn, {});

`;

exports[`require-throws-expectation > invalid(15): import assert from 'node:assert';\nassert.rejects(asyncFn, {}); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.rejects(asyncFn, {});
    |                         ^^ \`rejects()\` accepts any thrown value. Pass an error matcher (error class, \`RegExp\`, validation object, or function) as the second argument.

`;

exports[`require-throws-expectation > invalid(16): import assert from 'node:assert';\nassert.throws(fn, undefined); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(fn, undefined);

`;

exports[`require-throws-expectation > invalid(16): import assert from 'node:assert';\nassert.throws(fn, undefined); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws(fn, undefined);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`throws()\` accepts any thrown value. Pass an error matcher (error class, \`RegExp\`, validation object, or function) as the second argument.

`;

exports[`require-throws-expectation > invalid(17): import assert from 'node:assert';\nassert.throws(fn, null); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(fn, null);

`;

exports[`require-throws-expectation > invalid(17): import assert from 'node:assert';\nassert.throws(fn, null); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws(fn, null);
    | ^^^^^^^^^^^^^^^^^^^^^^^ \`throws()\` accepts any thrown value. Pass an error matcher (error class, \`RegExp\`, validation object, or function) as the second argument.

`;

exports[`require-throws-expectation > invalid(18): import assert from 'node:assert';\nassert.rejects(asyncFn, undefined); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.rejects(asyncFn, undefined);

`;

exports[`require-throws-expectation > invalid(18): import assert from 'node:assert';\nassert.rejects(asyncFn, undefined); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.rejects(asyncFn, undefined);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`rejects()\` accepts any thrown value. Pass an error matcher (error class, \`RegExp\`, validation object, or function) as the second argument.

`;

exports[`require-throws-expectation > invalid(19): import assert from 'node:assert';\nassert.rejects(asyncFn, null); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.rejects(asyncFn, null);

`;

exports[`require-throws-expectation > invalid(19): import assert from 'node:assert';\nassert.rejects(asyncFn, null); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.rejects(asyncFn, null);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`rejects()\` accepts any thrown value. Pass an error matcher (error class, \`RegExp\`, validation object, or function) as the second argument.

`;

exports[`require-throws-expectation > invalid(2): import assert from 'node:assert';\nassert.strict.throws(fn); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.strict.throws(fn);

`;

exports[`require-throws-expectation > invalid(2): import assert from 'node:assert';\nassert.strict.throws(fn); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.strict.throws(fn);
    | ^^^^^^^^^^^^^^^^^^^^^^^^ \`throws()\` accepts any thrown value. Pass an error matcher (error class, \`RegExp\`, validation object, or function) as the second argument.

`;

exports[`require-throws-expectation > invalid(20): import {throws} from 'node:assert';\nthrows(fn, undefined); 1`] = `

  1 | import {throws} from 'node:assert';
  2 | throws(fn, undefined);

`;

exports[`require-throws-expectation > invalid(20): import {throws} from 'node:assert';\nthrows(fn, undefined); 2`] = `

Message:
  1 | import {throws} from 'node:assert';
> 2 | throws(fn, undefined);
    | ^^^^^^^^^^^^^^^^^^^^^ \`throws()\` accepts any thrown value. Pass an error matcher (error class, \`RegExp\`, validation object, or function) as the second argument.

`;

exports[`require-throws-expectation > invalid(21): import test from 'node:test';\ntest('t', t => { t.assert.throws(fn, null); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => { t.assert.throws(fn, null); });

`;

exports[`require-throws-expectation > invalid(21): import test from 'node:test';\ntest('t', t => { t.assert.throws(fn, null); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('t', t => { t.assert.throws(fn, null); });
    |                  ^^^^^^^^^^^^^^^^^^^^^^^^^ \`throws()\` accepts any thrown value. Pass an error matcher (error class, \`RegExp\`, validation object, or function) as the second argument.

`;

exports[`require-throws-expectation > invalid(22): import assert from 'node:assert';\nassert.throws(fn, undefined as unknown); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(fn, undefined as unknown);

`;

exports[`require-throws-expectation > invalid(22): import assert from 'node:assert';\nassert.throws(fn, undefined as unknown); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws(fn, undefined as unknown);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`throws()\` accepts any thrown value. Pass an error matcher (error class, \`RegExp\`, validation object, or function) as the second argument.

`;

exports[`require-throws-expectation > invalid(23): import assert from 'node:assert';\nassert.throws(fn as () => void); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(fn as () => void);

`;

exports[`require-throws-expectation > invalid(23): import assert from 'node:assert';\nassert.throws(fn as () => void); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws(fn as () => void);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`throws()\` accepts any thrown value. Pass an error matcher (error class, \`RegExp\`, validation object, or function) as the second argument.

`;

exports[`require-throws-expectation > invalid(3): import assert from 'node:assert';\nassert.throws(() => compute()); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(() => compute());

`;

exports[`require-throws-expectation > invalid(3): import assert from 'node:assert';\nassert.throws(() => compute()); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws(() => compute());
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`throws()\` accepts any thrown value. Pass an error matcher (error class, \`RegExp\`, validation object, or function) as the second argument.

`;

exports[`require-throws-expectation > invalid(4): import assert from 'node:assert';\nassert.rejects(asyncFn); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.rejects(asyncFn);

`;

exports[`require-throws-expectation > invalid(4): import assert from 'node:assert';\nassert.rejects(asyncFn); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.rejects(asyncFn);
    | ^^^^^^^^^^^^^^^^^^^^^^^ \`rejects()\` accepts any thrown value. Pass an error matcher (error class, \`RegExp\`, validation object, or function) as the second argument.

`;

exports[`require-throws-expectation > invalid(5): import {throws} from 'node:assert';\nthrows(fn); 1`] = `

  1 | import {throws} from 'node:assert';
  2 | throws(fn);

`;

exports[`require-throws-expectation > invalid(5): import {throws} from 'node:assert';\nthrows(fn); 2`] = `

Message:
  1 | import {throws} from 'node:assert';
> 2 | throws(fn);
    | ^^^^^^^^^^ \`throws()\` accepts any thrown value. Pass an error matcher (error class, \`RegExp\`, validation object, or function) as the second argument.

`;

exports[`require-throws-expectation > invalid(6): import {strict as strictAssert} from 'node:assert';\nstrictAssert.throws(fn); 1`] = `

  1 | import {strict as strictAssert} from 'node:assert';
  2 | strictAssert.throws(fn);

`;

exports[`require-throws-expectation > invalid(6): import {strict as strictAssert} from 'node:assert';\nstrictAssert.throws(fn); 2`] = `

Message:
  1 | import {strict as strictAssert} from 'node:assert';
> 2 | strictAssert.throws(fn);
    | ^^^^^^^^^^^^^^^^^^^^^^^ \`throws()\` accepts any thrown value. Pass an error matcher (error class, \`RegExp\`, validation object, or function) as the second argument.

`;

exports[`require-throws-expectation > invalid(7): import test from 'node:test';\ntest('t', t => { t.assert.throws(fn); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => { t.assert.throws(fn); });

`;

exports[`require-throws-expectation > invalid(7): import test from 'node:test';\ntest('t', t => { t.assert.throws(fn); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('t', t => { t.assert.throws(fn); });
    |                  ^^^^^^^^^^^^^^^^^^^ \`throws()\` accepts any thrown value. Pass an error matcher (error class, \`RegExp\`, validation object, or function) as the second argument.

`;

exports[`require-throws-expectation > invalid(8): import assert from 'node:assert';\nassert.throws(fn, 42); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(fn, 42);

`;

exports[`require-throws-expectation > invalid(8): import assert from 'node:assert';\nassert.throws(fn, 42); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws(fn, 42);
    |                   ^^ \`throws()\` accepts any thrown value. Pass an error matcher (error class, \`RegExp\`, validation object, or function) as the second argument.

`;

exports[`require-throws-expectation > invalid(9): import assert from 'node:assert';\nassert.throws(fn, true); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(fn, true);

`;

exports[`require-throws-expectation > invalid(9): import assert from 'node:assert';\nassert.throws(fn, true); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws(fn, true);
    |                   ^^^^ \`throws()\` accepts any thrown value. Pass an error matcher (error class, \`RegExp\`, validation object, or function) as the second argument.

`;
